force-app/main/default/objects/Lead/fields/ae_createDate__c.field-meta.xml
<CustomField>
    <fullName>ae_createDate__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>作成日（AE連携用）</label>
    <type>Date</type>
</CustomField>