force-app/main/default/objects/Lead/fields/BA_request__c.field-meta.xml
<CustomField>
    <fullName>BA_request__c</fullName>
    <label>BuildApp_お役立ち資料</label>
    <length>100</length>
    <type>Text</type>
</CustomField>