force-app/main/default/objects/Lead/fields/BAN__c.field-meta.xml
<CustomField>
    <fullName>BAN__c</fullName>
    <label>興味のある分野_BAN</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>業界のトレンド情報</fullName>
            </value>
            <value>
                <fullName>各種商品情報</fullName>
            </value>
            <value>
                <fullName>業務改善に関する情報・ノウハウ</fullName>
            </value>
            <value>
                <fullName>競合情報</fullName>
            </value>
            <value>
                <fullName>施工事例</fullName>
            </value>
            <value>
                <fullName>BIMに関する情報</fullName>
            </value>
            <value>
                <fullName>CADに関する情報</fullName>
            </value>
            <value>
                <fullName>資格情報</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>