force-app/main/default/objects/Lead/fields/BAN_gyousyu__c.field-meta.xml
<CustomField>
    <fullName>BAN_gyousyu__c</fullName>
    <label>業種_BAN</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>総合建設会社</fullName>
            </value>
            <value>
                <fullName>専門工事会社</fullName>
            </value>
            <value>
                <fullName>建材メーカー</fullName>
            </value>
            <value>
                <fullName>ディベロッパー</fullName>
            </value>
            <value>
                <fullName>設計事務所</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>