force-app/main/default/objects/Lead/fields/BAN_syokusyu__c.field-meta.xml
<CustomField>
    <fullName>BAN_syokusyu__c</fullName>
    <label>職種_BAN</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>経営・役員</fullName>
            </value>
            <value>
                <fullName>経営企画・新規事業開発</fullName>
            </value>
            <value>
                <fullName>営業</fullName>
            </value>
            <value>
                <fullName>情報システム</fullName>
            </value>
            <value>
                <fullName>技術研究開発</fullName>
            </value>
            <value>
                <fullName>BIM推進・デジタル推進</fullName>
            </value>
            <value>
                <fullName>設計</fullName>
            </value>
            <value>
                <fullName>施工管理</fullName>
            </value>
            <value>
                <fullName>施工</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>