force-app/main/default/objects/Lead/fields/BIM10__c.field-meta.xml
<CustomField>
    <fullName>BIM10__c</fullName>
    <defaultValue>false</defaultValue>
    <label>今、どこの企業も欲しい！「BIM人材」確保のためのガイダンス</label>
    <type>Checkbox</type>
</CustomField>