force-app/main/default/objects/Lead/fields/BIM12__c.field-meta.xml
<CustomField>
    <fullName>BIM12__c</fullName>
    <defaultValue>false</defaultValue>
    <label>後悔しないための！BIMソフト・BIM導入ガイダンス</label>
    <type>Checkbox</type>
</CustomField>