force-app/main/default/objects/Lead/fields/BIM2__c.field-meta.xml
<CustomField>
    <fullName>BIM2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BIMの活用に対して社内の理解が足りない</label>
    <type>Checkbox</type>
</CustomField>