force-app/main/default/objects/Lead/fields/BIM_DX2__c.field-meta.xml
<CustomField>
    <fullName>BIM_DX2__c</fullName>
    <label>あなたは、ゼネコンのBIM活用を検討・推進されている方ですか？</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>