force-app/main/default/objects/Lead/fields/BuildApp__c.field-meta.xml
<CustomField>
    <fullName>BuildApp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BuildApp資料請求フォーム流入</label>
    <type>Checkbox</type>
</CustomField>