force-app/main/default/objects/Lead/fields/BuildAppKeyman__c.field-meta.xml
<CustomField>
    <fullName>BuildAppKeyman__c</fullName>
    <label>BuildAppキーマン</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BuildAppKeyman</valueSetName>
    </valueSet>
</CustomField>