force-app/main/default/objects/Lead/fields/BuildAppNews_merumagatourokubi__c.field-meta.xml
<CustomField>
    <fullName>BuildAppNews_merumagatourokubi__c</fullName>
    <label>BuildAppNewsメルマガ登録日</label>
    <type>Date</type>
</CustomField>