force-app/main/default/objects/Lead/fields/companyNameReplaced__c.field-meta.xml
<CustomField>
    <fullName>companyNameReplaced__c</fullName>
    <label>会社名（置換済）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>