force-app/main/default/objects/Lead/fields/counterClickInEmail__c.field-meta.xml
<CustomField>
    <fullName>counterClickInEmail__c</fullName>
    <label>メール内コンテンツクリック回数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>