force-app/main/default/objects/Lead/fields/CS_company__c.field-meta.xml
<CustomField>
    <fullName>CS_company__c</fullName>
    <label>CS_会社名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>