force-app/main/default/objects/Lead/fields/esLastEmailResponse__c.field-meta.xml
<CustomField>
    <fullName>esLastEmailResponse__c</fullName>
    <label>ESメール最終反応</label>
    <length>255</length>
    <type>Text</type>
</CustomField>