force-app/main/default/objects/Lead/fields/firstCpnInterest__c.field-meta.xml
<CustomField>
    <fullName>firstCpnInterest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ファーストタッチCPN(関心)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Campaign.cpnType__c</field>
            <operation>equals</operation>
            <value>関心</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>ファーストタッチリード（関心）</relationshipLabel>
    <relationshipName>lead_firstCpnInterest</relationshipName>
    <type>Lookup</type>
</CustomField>