force-app/main/default/objects/Lead/fields/Hotprofile_ID__c.field-meta.xml
<CustomField>
    <fullName>Hotprofile_ID__c</fullName>
    <label>HotProfileID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>