force-app/main/default/objects/Lead/fields/HPURL__c.field-meta.xml
<CustomField>
    <fullName>HPURL__c</fullName>
    <label>HPURL</label>
    <type>Url</type>
</CustomField>