force-app/main/default/objects/Lead/fields/isAutoUnsubscribe__c.field-meta.xml
<CustomField>
    <fullName>isAutoUnsubscribe__c</fullName>
    <formula>OR(AND(isblank( pi__last_activity__c ),NOT(JU_nagatatuushin_taisyou__c),NOT(sendanEmail__c)),  HasOptedOutOfEmailForSales__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>自動購読解除flg</label>
    <type>Checkbox</type>
</CustomField>