force-app/main/default/objects/Lead/fields/isEndAwareness_BuildApp__c.field-meta.xml
<CustomField>
    <fullName>isEndAwareness_BuildApp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>認知フェーズ終了flg</label>
    <type>Checkbox</type>
</CustomField>