force-app/main/default/objects/Lead/fields/isOptOut_buildAppNews__c.field-meta.xml
<CustomField>
    <fullName>isOptOut_buildAppNews__c</fullName>
    <defaultValue>false</defaultValue>
    <label>購読解除flg:【pref】BuildAppNews</label>
    <type>Checkbox</type>
</CustomField>