force-app/main/default/objects/Lead/fields/isOptOut_ce__c.field-meta.xml
<CustomField>
    <fullName>isOptOut_ce__c</fullName>
    <defaultValue>false</defaultValue>
    <label>購読解除flg:【pref】セメント</label>
    <type>Checkbox</type>
</CustomField>