force-app/main/default/objects/Lead/fields/isOptOut_cs__c.field-meta.xml
<CustomField>
    <fullName>isOptOut_cs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>購読解除flg:【pref】CS</label>
    <type>Checkbox</type>
</CustomField>