force-app/main/default/objects/Lead/fields/isOptOut_dx__c.field-meta.xml
<CustomField>
    <fullName>isOptOut_dx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>購読解除flg:【pref】BulidApp</label>
    <type>Checkbox</type>
</CustomField>