force-app/main/default/objects/Lead/fields/isOptOut_ju__c.field-meta.xml
<CustomField>
    <fullName>isOptOut_ju__c</fullName>
    <defaultValue>false</defaultValue>
    <label>購読解除flg:【pref】住環境</label>
    <type>Checkbox</type>
</CustomField>