force-app/main/default/objects/Lead/fields/isOptOut_st__c.field-meta.xml
<CustomField>
    <fullName>isOptOut_st__c</fullName>
    <defaultValue>false</defaultValue>
    <label>購読解除flg:【pref】ノハラスチール</label>
    <type>Checkbox</type>
</CustomField>