force-app/main/default/objects/Lead/fields/isThxMailTarget__c.field-meta.xml
<CustomField>
    <fullName>isThxMailTarget__c</fullName>
    <defaultValue>false</defaultValue>
    <label>thxメール配信flg</label>
    <type>Checkbox</type>
</CustomField>