force-app/main/default/objects/Lead/fields/JU_Industory__c.field-meta.xml
<CustomField>
    <fullName>JU_Industory__c</fullName>
    <label>業種_JU</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>住宅会社1000棟以上/年</fullName>
            </value>
            <value>
                <fullName>住宅会社300棟以上/年</fullName>
            </value>
            <value>
                <fullName>住宅会社100棟以上/年</fullName>
            </value>
            <value>
                <fullName>住宅会社100棟未満/年</fullName>
            </value>
            <value>
                <fullName>賃貸住宅会社</fullName>
            </value>
            <value>
                <fullName>リフォーム会社</fullName>
            </value>
            <value>
                <fullName>専門工事会社</fullName>
            </value>
            <value>
                <fullName>設計サービス</fullName>
            </value>
            <value>
                <fullName>建材メーカー</fullName>
            </value>
            <value>
                <fullName>建材流通</fullName>
            </value>
            <value>
                <fullName>その他サービス</fullName>
            </value>
            <value>
                <fullName>その他メーカー</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>