force-app/main/default/objects/Lead/fields/JU_ManagementTarget__c.field-meta.xml
<CustomField>
    <fullName>JU_ManagementTarget__c</fullName>
    <defaultValue>false</defaultValue>
    <label>管理対象_JU</label>
    <type>Checkbox</type>
</CustomField>