force-app/main/default/objects/Lead/fields/JU_ProspectID__c.field-meta.xml
<CustomField>
    <fullName>JU_ProspectID__c</fullName>
    <label>住環境プロスペクト作成用ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>