force-app/main/default/objects/Lead/fields/Matterport_shiyouhouhou_date__c.field-meta.xml
<CustomField>
    <fullName>Matterport_shiyouhouhou_date__c</fullName>
    <label>MP資料DL_使用方法_日付</label>
    <type>Date</type>
</CustomField>