force-app/main/default/objects/Lead/fields/mobilephone__c.field-meta.xml
<CustomField>
    <fullName>mobilephone__c</fullName>
    <label>携帯電話</label>
    <type>Phone</type>
</CustomField>