force-app/main/default/objects/Lead/fields/optOutCalling_BuildApp__c.field-meta.xml
<CustomField>
    <fullName>optOutCalling_BuildApp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BuildApp架電拒否</label>
    <type>Checkbox</type>
</CustomField>