force-app/main/default/objects/Lead/fields/optOutCalling_BuildAppNews__c.field-meta.xml
<CustomField>
    <fullName>optOutCalling_BuildAppNews__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BuildAppNews架電拒否</label>
    <type>Checkbox</type>
</CustomField>