force-app/main/default/objects/Lead/fields/optOutCalling_Ce__c.field-meta.xml
<CustomField>
    <fullName>optOutCalling_Ce__c</fullName>
    <defaultValue>false</defaultValue>
    <label>セメント架電拒否</label>
    <type>Checkbox</type>
</CustomField>