force-app/main/default/objects/Lead/fields/optOutCalling_Cs__c.field-meta.xml
<CustomField>
    <fullName>optOutCalling_Cs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CS架電拒否</label>
    <type>Checkbox</type>
</CustomField>