force-app/main/default/objects/Lead/fields/optOutCalling_En__c.field-meta.xml
<CustomField>
    <fullName>optOutCalling_En__c</fullName>
    <defaultValue>false</defaultValue>
    <label>エンジ架電拒否</label>
    <type>Checkbox</type>
</CustomField>