force-app/main/default/objects/Lead/fields/optOutCalling_Sl__c.field-meta.xml
<CustomField>
    <fullName>optOutCalling_Sl__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ソリューション営業課架電拒否</label>
    <type>Checkbox</type>
</CustomField>