force-app/main/default/objects/Lead/fields/optOutDm_BuildAppNews__c.field-meta.xml
<CustomField>
    <fullName>optOutDm_BuildAppNews__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BuildAppNewsDM拒否</label>
    <type>Checkbox</type>
</CustomField>