force-app/main/default/objects/Lead/fields/optOutDm_Ce__c.field-meta.xml
<CustomField>
    <fullName>optOutDm_Ce__c</fullName>
    <defaultValue>false</defaultValue>
    <label>セメントDM拒否</label>
    <type>Checkbox</type>
</CustomField>