force-app/main/default/objects/Lead/fields/optOutDm_Cs__c.field-meta.xml
<CustomField>
    <fullName>optOutDm_Cs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CSDM拒否</label>
    <type>Checkbox</type>
</CustomField>