force-app/main/default/objects/Lead/fields/optOutDm_Ju__c.field-meta.xml
<CustomField>
    <fullName>optOutDm_Ju__c</fullName>
    <defaultValue>false</defaultValue>
    <label>住環境DM拒否</label>
    <type>Checkbox</type>
</CustomField>