force-app/main/default/objects/Lead/fields/optOutMail_BuildApp__c.field-meta.xml
<CustomField>
    <fullName>optOutMail_BuildApp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BuildAppメール拒否</label>
    <type>Checkbox</type>
</CustomField>