force-app/main/default/objects/Lead/fields/optOutMail_BuildAppNews__c.field-meta.xml
<CustomField>
    <fullName>optOutMail_BuildAppNews__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BuildAppNewsメール拒否</label>
    <type>Checkbox</type>
</CustomField>