force-app/main/default/objects/Lead/fields/optOutMail_Ce__c.field-meta.xml
<CustomField>
    <fullName>optOutMail_Ce__c</fullName>
    <defaultValue>false</defaultValue>
    <label>セメントメール拒否</label>
    <type>Checkbox</type>
</CustomField>