force-app/main/default/objects/Lead/fields/optOutSales_BuildApp__c.field-meta.xml
<CustomField>
    <fullName>optOutSales_BuildApp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BuildApp営業拒否</label>
    <type>Checkbox</type>
</CustomField>