force-app/main/default/objects/Lead/fields/optOutSales_BuildAppNews__c.field-meta.xml
<CustomField>
    <fullName>optOutSales_BuildAppNews__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BuildAppNews営業拒否</label>
    <type>Checkbox</type>
</CustomField>