force-app/main/default/objects/Lead/fields/optOutSales_Ce__c.field-meta.xml
<CustomField>
    <fullName>optOutSales_Ce__c</fullName>
    <defaultValue>false</defaultValue>
    <label>セメント営業拒否</label>
    <type>Checkbox</type>
</CustomField>