force-app/main/default/objects/Lead/fields/optOutSales_St__c.field-meta.xml
<CustomField>
    <fullName>optOutSales_St__c</fullName>
    <defaultValue>false</defaultValue>
    <label>スチール営業拒否</label>
    <type>Checkbox</type>
</CustomField>