force-app/main/default/objects/Lead/fields/ourceB_BuildApp__c.field-meta.xml
<CustomField>
    <fullName>ourceB_BuildApp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>B：野原産業セメント入手（BuildApp）</label>
    <type>Checkbox</type>
</CustomField>