force-app/main/default/objects/Lead/fields/SL_about_cloud2__c.field-meta.xml
<CustomField>
    <fullName>SL_about_cloud2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SL_クラウド契約について</label>
    <type>Checkbox</type>
</CustomField>