force-app/main/default/objects/Lead/fields/SL_about_cloud__c.field-meta.xml
<CustomField>
    <fullName>SL_about_cloud__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Account Engagement連携項目</description>
    <label>SL_クラウド契約について(非表示)</label>
    <type>Checkbox</type>
</CustomField>