force-app/main/default/objects/Lead/fields/SL_about_Pro2__c.field-meta.xml
<CustomField>
    <fullName>SL_about_Pro2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Account Engagement連携項目</description>
    <label>SL_Pro2カメラについて(非表示)</label>
    <type>Checkbox</type>
</CustomField>