force-app/main/default/objects/Lead/fields/SL_about_Pro2_EnterDate__c.field-meta.xml
<CustomField>
    <fullName>SL_about_Pro2_EnterDate__c</fullName>
    <label>SL_Pro2カメラについて_入力日</label>
    <type>Date</type>
</CustomField>