force-app/main/default/objects/Lead/fields/SL_about_Pro3_2__c.field-meta.xml
<CustomField>
    <fullName>SL_about_Pro3_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SL_Pro3カメラについて</label>
    <type>Checkbox</type>
</CustomField>