force-app/main/default/objects/Lead/fields/SL_address__c.field-meta.xml
<CustomField>
    <fullName>SL_address__c</fullName>
    <label>SL_住所</label>
    <length>255</length>
    <type>Text</type>
</CustomField>