force-app/main/default/objects/Lead/fields/SL_BillingDate__c.field-meta.xml
<CustomField>
    <fullName>SL_BillingDate__c</fullName>
    <label>SL_請求日</label>
    <type>Date</type>
</CustomField>