force-app/main/default/objects/Lead/fields/SL_camera_quotation2__c.field-meta.xml
<CustomField>
    <fullName>SL_camera_quotation2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SL_カメラお見積り</label>
    <type>Checkbox</type>
</CustomField>