force-app/main/default/objects/Lead/fields/SL_camera_quotation__c.field-meta.xml
<CustomField>
    <fullName>SL_camera_quotation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SL_カメラお見積り(非表示)</label>
    <type>Checkbox</type>
</CustomField>