force-app/main/default/objects/Lead/fields/SL_CameraQuote_EnterDate__c.field-meta.xml
<CustomField>
    <fullName>SL_CameraQuote_EnterDate__c</fullName>
    <label>SL_カメラお見積り_入力日</label>
    <type>Date</type>
</CustomField>