force-app/main/default/objects/Lead/fields/SL_category__c.field-meta.xml
<CustomField>
    <fullName>SL_category__c</fullName>
    <label>SL_category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SL_Category</valueSetName>
    </valueSet>
</CustomField>