force-app/main/default/objects/Lead/fields/SL_cloud_contract2__c.field-meta.xml
<CustomField>
    <fullName>SL_cloud_contract2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SL_クラウド契約（3Dモデル・保管・編集のため必須）</label>
    <type>Checkbox</type>
</CustomField>