force-app/main/default/objects/Lead/fields/SL_CloudContract_EnterDate__c.field-meta.xml
<CustomField>
    <fullName>SL_CloudContract_EnterDate__c</fullName>
    <label>SL_クラウド契約（3Dモデル・保管・編集のため必須）_入力日</label>
    <type>Date</type>
</CustomField>