force-app/main/default/objects/Lead/fields/SL_Contents__c.field-meta.xml
<CustomField>
    <fullName>SL_Contents__c</fullName>
    <label>SL_お問い合わせ項目</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SL_Contents</valueSetName>
    </valueSet>
</CustomField>