force-app/main/default/objects/Lead/fields/SL_ContentsNote__c.field-meta.xml
<CustomField>
    <fullName>SL_ContentsNote__c</fullName>
    <label>SL_内容/備考</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>