force-app/main/default/objects/Lead/fields/SL_CustomerCategory_Nohara__c.field-meta.xml
<CustomField>
    <fullName>SL_CustomerCategory_Nohara__c</fullName>
    <label>SL_顧客カテゴリ_野原</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EL_CustomerCategory_Nohara</valueSetName>
    </valueSet>
</CustomField>