force-app/main/default/objects/Lead/fields/SL_demo_2__c.field-meta.xml
<CustomField>
    <fullName>SL_demo_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SL_実機デモ会希望(非表示)</label>
    <type>Checkbox</type>
</CustomField>