force-app/main/default/objects/Lead/fields/SL_demo_date__c.field-meta.xml
<CustomField>
    <fullName>SL_demo_date__c</fullName>
    <label>SL_実機デモ会希望_入力日</label>
    <type>Date</type>
</CustomField>