force-app/main/default/objects/Lead/fields/SL_Department_2__c.field-meta.xml
<CustomField>
    <fullName>SL_Department_2__c</fullName>
    <label>SL_部署</label>
    <length>200</length>
    <type>Text</type>
</CustomField>