force-app/main/default/objects/Lead/fields/SL_Event21_12_DX__c.field-meta.xml
<CustomField>
    <fullName>SL_Event21_12_DX__c</fullName>
    <defaultValue>false</defaultValue>
    <label>21.12建設DX展</label>
    <type>Checkbox</type>
</CustomField>