force-app/main/default/objects/Lead/fields/SL_event_22_07_SPAR2022A__c.field-meta.xml
<CustomField>
    <fullName>SL_event_22_07_SPAR2022A__c</fullName>
    <defaultValue>false</defaultValue>
    <label>22.07 SPAR2022A</label>
    <type>Checkbox</type>
</CustomField>