force-app/main/default/objects/Lead/fields/SL_EventInquiryDate__c.field-meta.xml
<CustomField>
    <fullName>SL_EventInquiryDate__c</fullName>
    <label>SL_イベント問い合わせ日</label>
    <type>Date</type>
</CustomField>