force-app/main/default/objects/Lead/fields/SL_FirstContact_ContactDate__c.field-meta.xml
<CustomField>
    <fullName>SL_FirstContact_ContactDate__c</fullName>
    <label>初回接点_問い合わせ日</label>
    <type>Date</type>
</CustomField>