force-app/main/default/objects/Lead/fields/SL_Industy__c.field-meta.xml
<CustomField>
    <fullName>SL_Industy__c</fullName>
    <label>SL_Industy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SL_Industy</valueSetName>
    </valueSet>
</CustomField>