force-app/main/default/objects/Lead/fields/SL_newsletter__c.field-meta.xml
<CustomField>
    <fullName>SL_newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SL_ニュースレター</label>
    <type>Checkbox</type>
</CustomField>