force-app/main/default/objects/Lead/fields/SL_Other__c.field-meta.xml
<CustomField>
    <fullName>SL_Other__c</fullName>
    <label>SL_Otherの場合</label>
    <length>255</length>
    <type>Text</type>
</CustomField>