force-app/main/default/objects/Lead/fields/SL_Other_EnterDate__c.field-meta.xml
<CustomField>
    <fullName>SL_Other_EnterDate__c</fullName>
    <label>SL_その他_入力日</label>
    <type>Date</type>
</CustomField>