force-app/main/default/objects/Lead/fields/SL_photograph_edit_support__c.field-meta.xml
<CustomField>
    <fullName>SL_photograph_edit_support__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SL_撮影/編集/サポート(非表示)</label>
    <type>Checkbox</type>
</CustomField>