force-app/main/default/objects/Lead/fields/SL_PhotographyCompany__c.field-meta.xml
<CustomField>
    <fullName>SL_PhotographyCompany__c</fullName>
    <label>SL_撮影会社</label>
    <length>255</length>
    <type>Text</type>
</CustomField>