force-app/main/default/objects/Lead/fields/SL_Pro2_500_DX_N__c.field-meta.xml
<CustomField>
    <fullName>SL_Pro2_500_DX_N__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SL_Pro2用三脚 (スリック / プロ 500 DX Ⅲ N 脚)</label>
    <type>Checkbox</type>
</CustomField>