force-app/main/default/objects/Lead/fields/SL_Pro2_ALTA_FLY_49T__c.field-meta.xml
<CustomField>
    <fullName>SL_Pro2_ALTA_FLY_49T__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SL_Pro2用キャリーケース (バンガード / ALTA FLY 49T)</label>
    <type>Checkbox</type>
</CustomField>