force-app/main/default/objects/Lead/fields/SL_Pro2_rental_sankyaku_undai_carrycase__c.field-meta.xml
<CustomField>
    <fullName>SL_Pro2_rental_sankyaku_undai_carrycase__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SL_【レンタル】Pro2カメラ(三脚・雲台・キャリーケース付き)</label>
    <type>Checkbox</type>
</CustomField>