force-app/main/default/objects/Lead/fields/SL_question2__c.field-meta.xml
<CustomField>
    <fullName>SL_question2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SL_ご質問</label>
    <type>Checkbox</type>
</CustomField>