force-app/main/default/objects/Lead/fields/SL_question__c.field-meta.xml
<CustomField>
    <fullName>SL_question__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SL_ご質問(非表示)</label>
    <type>Checkbox</type>
</CustomField>