force-app/main/default/objects/Lead/fields/SL_Question_EnterDate__c.field-meta.xml
<CustomField>
    <fullName>SL_Question_EnterDate__c</fullName>
    <label>SL_ご質問_入力日</label>
    <type>Date</type>
</CustomField>