force-app/main/default/objects/Lead/fields/SL_QuestionClassification__c.field-meta.xml
<CustomField>
    <fullName>SL_QuestionClassification__c</fullName>
    <label>SL_問い合わせ内容</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SL_QuestionClassification</valueSetName>
    </valueSet>
</CustomField>